[gd_scene load_steps=14 format=3 uid="uid://b3wcvwxrd6od8"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_g6k5k"]
[ext_resource type="Texture2D" uid="uid://bkpg6mx2c1tax" path="res://Sprites/To_fullscreen_icon.png" id="2_msax4"]
[ext_resource type="Texture2D" uid="uid://0fjci5syshgr" path="res://Sprites/To_window_icon.png" id="3_psjrl"]
[ext_resource type="Texture2D" uid="uid://dp8v40hxbjffj" path="res://Sprites/Menu_background.png" id="4_atvgs"]
[ext_resource type="Script" path="res://Scripts/submenus_manager.gd" id="5_c8ybp"]
[ext_resource type="Texture2D" uid="uid://b5k7erlgu3o4t" path="res://Sprites/Title_text.png" id="6_fonaa"]
[ext_resource type="Texture2D" uid="uid://btumygdqdqnvg" path="res://Sprites/Play_text.png" id="7_j8b2a"]
[ext_resource type="Texture2D" uid="uid://cioffrisl6lah" path="res://Sprites/New_game_text.png" id="8_65hcx"]
[ext_resource type="Texture2D" uid="uid://bvp23hy5bocj" path="res://Sprites/Load_text.png" id="9_wbfer"]
[ext_resource type="Texture2D" uid="uid://b0bgudhe7enm4" path="res://Sprites/Back_arrow_icon.png" id="10_o8rxc"]
[ext_resource type="Texture2D" uid="uid://cw8mx8ijbgmd2" path="res://Sprites/Exit_icon.png" id="11_vmw5j"]

[sub_resource type="Gradient" id="Gradient_xgjnp"]
offsets = PackedFloat32Array(0, 0.677419, 1)
colors = PackedColorArray(0, 0, 0, 0.588235, 0, 0, 0, 0.588235, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_gno61"]
gradient = SubResource("Gradient_xgjnp")

[node name="main_menu" type="Control" node_paths=PackedStringArray("load_game_button", "toggle_fullscreen_button", "toggle_fullscreen_sprite")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g6k5k")
load_game_button = NodePath("CanvasLayer/background/TextureRect/sidebar/play_buttons/Load")
toggle_fullscreen_button = NodePath("CanvasLayer/background/TextureRect/toggle_fullscreen")
toggle_fullscreen_sprite = NodePath("CanvasLayer/background/TextureRect/toggle_fullscreen/TextureRect")
to_fullscreen_texture = ExtResource("2_msax4")
to_window_texture = ExtResource("3_psjrl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="background" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.121569, 0.345098, 1)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_atvgs")
flip_h = true

[node name="sidebar" type="TextureRect" parent="CanvasLayer/background/TextureRect" node_paths=PackedStringArray("main_submenu", "play_submenu", "back_button")]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 611.0
grow_vertical = 2
texture = SubResource("GradientTexture1D_gno61")
script = ExtResource("5_c8ybp")
main_submenu = NodePath("main_buttons")
play_submenu = NodePath("play_buttons")
back_button = NodePath("back")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/background/TextureRect/sidebar"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 325.0
offset_bottom = 212.0
texture = ExtResource("6_fonaa")
expand_mode = 1
stretch_mode = 4

[node name="main_buttons" type="Control" parent="CanvasLayer/background/TextureRect/sidebar"]
anchors_preset = 0
offset_top = 219.0
offset_right = 375.0
offset_bottom = 645.0

[node name="New Game" type="Button" parent="CanvasLayer/background/TextureRect/sidebar/main_buttons"]
layout_mode = 1
offset_left = 20.0
offset_top = 13.0
offset_right = 359.0
offset_bottom = 78.0

[node name="text" type="TextureRect" parent="CanvasLayer/background/TextureRect/sidebar/main_buttons/New Game"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -31.0
offset_right = 64.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_j8b2a")
expand_mode = 1
stretch_mode = 4

[node name="play_buttons" type="Control" parent="CanvasLayer/background/TextureRect/sidebar"]
visible = false
anchors_preset = 0
offset_top = 219.0
offset_right = 375.0
offset_bottom = 645.0

[node name="New Game" type="Button" parent="CanvasLayer/background/TextureRect/sidebar/play_buttons"]
layout_mode = 1
offset_left = 20.0
offset_top = 13.0
offset_right = 359.0
offset_bottom = 78.0

[node name="text" type="TextureRect" parent="CanvasLayer/background/TextureRect/sidebar/play_buttons/New Game"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.5
offset_top = -36.5
offset_right = 111.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_65hcx")
expand_mode = 1
stretch_mode = 4

[node name="Load" type="Button" parent="CanvasLayer/background/TextureRect/sidebar/play_buttons"]
layout_mode = 1
offset_left = 19.0
offset_top = 94.0
offset_right = 358.0
offset_bottom = 159.0

[node name="text" type="TextureRect" parent="CanvasLayer/background/TextureRect/sidebar/play_buttons/Load"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.5
offset_top = -31.5
offset_right = 94.5
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_wbfer")
expand_mode = 1
stretch_mode = 4

[node name="back" type="Button" parent="CanvasLayer/background/TextureRect/sidebar"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -78.815
offset_right = 358.0
offset_bottom = -13.815
grow_vertical = 0

[node name="text" type="TextureRect" parent="CanvasLayer/background/TextureRect/sidebar/back"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.5
offset_top = -31.5
offset_right = 170.5
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_o8rxc")
expand_mode = 1

[node name="Quit" type="Button" parent="CanvasLayer/background/TextureRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -51.0
offset_bottom = 51.0
grow_horizontal = 0
icon = ExtResource("11_vmw5j")
icon_alignment = 1

[node name="toggle_fullscreen" type="Button" parent="CanvasLayer/background/TextureRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -51.0
offset_top = 51.0
offset_bottom = 102.0
grow_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/background/TextureRect/toggle_fullscreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -12.5
offset_right = 20.5
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_msax4")
expand_mode = 1
stretch_mode = 4

[connection signal="pressed" from="CanvasLayer/background/TextureRect/sidebar/main_buttons/New Game" to="CanvasLayer/background/TextureRect/sidebar" method="show_play_submenu"]
[connection signal="pressed" from="CanvasLayer/background/TextureRect/sidebar/play_buttons/New Game" to="." method="new_game"]
[connection signal="pressed" from="CanvasLayer/background/TextureRect/sidebar/play_buttons/Load" to="." method="play"]
[connection signal="pressed" from="CanvasLayer/background/TextureRect/sidebar/back" to="CanvasLayer/background/TextureRect/sidebar" method="show_main_submenu"]
[connection signal="pressed" from="CanvasLayer/background/TextureRect/Quit" to="." method="quit"]
[connection signal="pressed" from="CanvasLayer/background/TextureRect/toggle_fullscreen" to="." method="toggle_fullscreen"]
